 that offers to convert them instead of toggling on eol visibility as it
 previously did, since this was found to be confusing to many.
+Add option to enable/disable checking of eol characters.
+Add menu shortcut for toggle fold.
+Add a verbose debug mode for view stack tracebacks in editra log messages.
+Updated (Italian, Japanese, Latvian, Polish, Russian, Spanish, Turkish) Translations.

BUG FIXES:
+Fix find options not properly being syncronized between dialog and find bar.
+Fix event handlers not properly getting connected when going from 2 -> 1 open windows.
+Fix eol mode settings in preferences.
+Fix search bar text not being colored properly on msw/gtk.
+Fix window not being raised from taskbar when opening file with 'Open with...'
+Fix drag and drop error for instlling plugins through plugin manager.

#-----------------------------------------------------------------------------#

VERSION 0.4.28
DATE 12/20/2008
21st Alpha Release

NEWS:
This is yet another quick turnaround bug fix release. The previous build had
an issue with some missing files. This release also adds the new pane navigator
feature to make it easy to move from panel to panel with the keyboard.

NEW: [features/improvements]
+Keyboard navigation of MainWindow panes (OSX: Alt+Tab, Others:Alt+1).
 (modified patch from Giuseppe "Cowo" Corbelli).

BUG FIXES:
+Fix search string not getting set from buffer selection in search bar.
+Fix error when clicking Regular Expression in Search Bar
+Add some missing sql keywords.

#-----------------------------------------------------------------------------#

VERSION 0.4.25
DATE 12/17/2008
20th Alpha Release

NEWS:
This is another quick turnaround release to fix some fairly critical bugs in the
last release.

NEW: [features/improvements]
+Some autocompletion behavior improvements
+Some minor ui changes to the command bar

BUG FIXES:
+Fix find in files where if the filter was empty no files were searched.